--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
